--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "run-sequence": "^2.2.1",
     "stylelint": "9.6.x",
     "stylelint-config-htmlacademy": "0.1.x",
-    "gulp-gh-pages": "^0.5.4"
+    "gh-pages": "^2.0.1"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
