--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "pink",
-  "version": "15.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "Личный проект «Пинк» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
-    "autoprefixer": "9.1.x",
-    "browser-sync": "2.24.x",
+    "autoprefixer": "9.3.x",
+    "browser-sync": "2.26.x",
     "del": "^3.0.0",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
-    "gulp-posthtml": "^3.0.4",
+    "gulp-posthtml": "^3.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "4.0.x",
     "gulp-svgmin": "^2.1.0",
     "gulp-svgstore": "^7.0.0",
-    "gulp-uglify": "^3.0.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-webp": "^3.0.0",
-    "posthtml-include": "^1.2.0",
+    "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.1",
-    "stylelint": "9.6.x",
+    "stylelint": "9.7.x",
     "stylelint-config-htmlacademy": "0.1.x",
-    "gh-pages": "^2.0.1"
+    "gulp-gh-pages": "^0.5.4"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
@@ -40,14 +40,14 @@
     "Firefox ESR"
   ],
   "editorconfig-cli": [
+    "*.html",
     "*.json",
     "*.js",
-    "source/*.html",
-    "source/js/**/*.js",
-    "source/img/**/*.svg",
-    "source/sass/**/*.{sass,scss}"
+    "js/**/*.js",
+    "img/**/*.svg",
+    "sass/**/*.{sass,scss}"
   ],
   "engines": {
-    "node": "8.2"
+    "node": "8.12"
   }
 }
